Fixed z-index bug

--- a/src/components/styles/form.css
+++ b/src/components/styles/form.css
@@ -10,7 +10,7 @@
 .container {
   position: relative;
   width:100vw;
-  height: 100px;
+  height: 150px;
   top: 60px;
   text-align: center;
   font-weight: 600;
