--- a/src/components/styles/welcomeMaster.css
+++ b/src/components/styles/welcomeMaster.css
@@ -44,7 +44,7 @@ a:hover {
     animation: gradientAnimation 15s ease infinite;
     position: relative;
     overflow: hidden;
-    z-index: -100;
+    z-index: 0;
 }
 
 /* Hero Section Styles */
@@ -116,7 +116,7 @@ a:hover {
     /* grid-area: 'form'; */
     grid-column: 2 / 4;
     grid-row: 2 / 3;
-    z-index: 2;
+    z-index: 3;
     margin-top: 50px;
 }
 .contact-form {
@@ -132,7 +132,7 @@ a:hover {
     /* border-radius: 5px; */
     /* Adjust width as needed */
     /* width: 40%; */
-    z-index: 1;
+    z-index: 2;
 }
 .contact-form h1 {
     font-size: 3.5vw;
